--- a/crab4j-core/pom.xml
+++ b/crab4j-core/pom.xml
@@ -6,10 +6,17 @@
         <artifactId>crab4j-all</artifactId>
         <groupId>cn.crab4j</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>crab4j-core</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
