--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,18 @@
     <groupId>cn.crab4j</groupId>
     <artifactId>crab4j-all</artifactId>
     <packaging>pom</packaging>
-    <version>${reversion</version>
+    <version>1.0-SNAPSHOT</version>
 
     <modules>
         <module>crab4j-core</module>
+        <module>crab4j-spring-boot-starter</module>
+        <module>crab4j-example</module>
     </modules>
 
     <name>${project.artifactId}</name>
     <description>一个基于事件发布与订阅的通用框架</description>
 
     <properties>
-        <reversion>1.0-SNAPSHOT</reversion>
-
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
