--- a/crab4j-example/crab4j-example-springboot/pom.xml
+++ b/crab4j-example/crab4j-example-springboot/pom.xml
@@ -4,26 +4,33 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>crab4j-all</artifactId>
+        <artifactId>crab4j-example</artifactId>
         <groupId>cn.crab4j</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>crab4j-example</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>crab4j-example-springboot</artifactId>
 
     <name>${project.artifactId}</name>
-    <description>整合案例</description>
-
-    <modules>
-        <module>crab4j-example-monitor</module>
-        <module>crab4j-example-springboot</module>
-    </modules>
+    <description>整合 SpringBoot 案例</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.crab4j</groupId>
+            <artifactId>crab4j-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
