--- a/crab4j-spring-boot-starter/pom.xml
+++ b/crab4j-spring-boot-starter/pom.xml
@@ -25,6 +25,8 @@
         <spring.version>5.3.0</spring.version>
 
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+
+        <slf4j.version>1.7.32</slf4j.version>
     </properties>
 
     <dependencies>
@@ -38,6 +40,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
