--- a/crab4j-event-toolkit/pom.xml
+++ b/crab4j-event-toolkit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>crab4j-all</artifactId>
         <groupId>cn.dlmyl.crab4j</groupId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <artifactId>crab4j-event-toolkit</artifactId>
