--- a/crab4j-example/crab4j-example-springboot/pom.xml
+++ b/crab4j-example/crab4j-example-springboot/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>crab4j-example</artifactId>
         <groupId>cn.dlmyl.crab4j</groupId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <artifactId>crab4j-example-springboot</artifactId>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>cn.dlmyl.crab4j</groupId>
             <artifactId>crab4j-spring-boot-starter</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0.1</version>
         </dependency>
     </dependencies>
 
