--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>cn.dlmyl.crab4j</groupId>
     <artifactId>crab4j-all</artifactId>
     <packaging>pom</packaging>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <name>${project.artifactId}</name>
     <description>一个基于事件发布与订阅的通用框架</description>
