--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>crab4j-event-toolkit</module>
         <module>crab4j-example</module>
         <module>crab4j-spring-boot-starter</module>
+        <module>crab4j-core</module>
     </modules>
 
     <properties>
