--- a/crab4j-example/crab4j-example-frameless/pom.xml
+++ b/crab4j-example/crab4j-example-frameless/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>crab4j-core</artifactId>
             <version>2.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
